# BharatSim

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  render.yaml
backend/: .env  alembic.ini  pyproject.toml  requirements-lite.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  geo.py  main.py  seed.py
backend/app/ml/: __init__.py  air_quality_model.py  base.py  crop_yield_model.py  flood_model.py  heatwave_model.py  utils.py
backend/app/models/: __init__.py  district.py  ml_model.py  population.py  river.py  satellite.py  simulation.py  weather.py
backend/app/routers/: __init__.py  assistant.py  dashboard.py  datasets.py  districts.py  models.py  simulations.py
backend/app/schemas/: __init__.py  assistant.py  district.py  simulation.py  weather.py
backend/app/services/: __init__.py  assistant_service.py  dataset_service.py  live_data.py  ml_service.py  simulation_service.py
backend/app/simulation/: __init__.py  base.py  config.py  registry.py  runner.py
backend/app/simulation/modules/: __init__.py  air_quality.py  crop_yield.py  flood.py  heatwave.py
backend/tests/: __init__.py  conftest.py  test_districts.py  test_simulations.py
data/: README.md  generate_sample_data.py  init.sql
data/sample/: population_sample.csv  river_flow_sample.csv  satellite_sample.csv  weather_sample.csv
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: india-districts.geojson
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useDashboard.ts  useMapData.ts  (+1 more)
(+24 files in other folders)
