[project]
name = "bharatsim-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "geoalchemy2>=0.15.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.4.0",
    "torch>=2.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "shapely>=2.0.0",
    "geopandas>=1.0.0",
    "celery[redis]>=5.4.0",
    "httpx>=0.27.0",
    "joblib>=1.4.0",
    "python-dotenv>=1.0.0",
    "geojson>=3.1.0",
    "openai>=1.30.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
